# NEB_interpolator

./: .gitignore  CMakeLists.txt  CMakelists.txt  README.md  README_EN.md  cursor.bat  neb.cpp
examples/: molecule1.xyz  molecule2.xyz
src/: calc_rmsd_xyz.f90  neb_interpolator.cpp  neb_interpolator.h  xyzgeom.cpp
